changed navigation style, new quote form layout, improved usability

--- a/app/src/main/res/drawable/ic_flag.xml
+++ b/app/src/main/res/drawable/ic_flag.xml
@@ -1,20 +1,10 @@
-<vector android:autoMirrored="true"
-    android:height="24dp"
-    android:tint="?android:textColorPrimary"
-    android:viewportWidth="489.8"
-    android:viewportHeight="489.8"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:autoMirrored="true"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M359.1,161.693v-88.3c0,-4.6 -2.5,-8.7 -6.6,-10.8c-4,-2.1 -8.9,-1.8 -12.7,0.8c-87.8,60.7 -138.2,68.5 -172.3,68.5H70c-38.6,0 -70,31.4 -70,70v26c0,38.6 31.4,70 70,70h46.8l50.8,123.1c1.9,4.7 6.5,7.6 11.3,7.6c1.6,0 3.1,-0.3 4.7,-0.9c6.3,-2.6 9.2,-9.7 6.7,-16l-47,-113.8h24.1c118.8,0 167.4,62.9 169.6,65.8c2.4,3.2 6,5 9.8,5c1.3,0 2.6,-0.2 3.8,-0.6c5,-1.7 8.4,-6.3 8.4,-11.6v-88.2c24.3,-5.6 42.4,-27.3 42.4,-53.3C401.6,188.993 383.4,167.193 359.1,161.693zM24.5,227.893v-26c0,-25.1 20.4,-45.5 45.5,-45.5h42.8v117H70C44.9,273.393 24.5,252.993 24.5,227.893zM334.6,326.993c-27.2,-22.4 -80.6,-53.6 -167.2,-53.6h-30.2v-117h30.2c35,0 85.2,-7.2 167.2,-60V326.993zM359.1,242.493v-55.1c10.6,4.7 17.9,15.3 17.9,27.6C377.1,227.193 369.7,237.793 359.1,242.493z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M477.5,202.693h-47.9c-6.8,0 -12.3,5.5 -12.3,12.3s5.5,12.3 12.3,12.3h47.9c6.8,0 12.3,-5.5 12.3,-12.3C489.8,208.093 484.3,202.693 477.5,202.693z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M412.6,176.893c1.9,4.8 6.5,7.8 11.4,7.8c1.5,0 3,-0.3 4.5,-0.8l46.4,-18.2c6.3,-2.5 9.4,-9.6 6.9,-15.9c-2.5,-6.3 -9.6,-9.4 -15.9,-6.9l-46.4,18.2C413.3,163.493 410.2,170.593 412.6,176.893z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M474.9,264.093l-46.4,-18.2c-6.3,-2.5 -13.4,0.6 -15.9,6.9c-2.5,6.3 0.6,13.4 6.9,15.9l46.4,18.2c1.5,0.6 3,0.8 4.5,0.8c4.9,0 9.5,-3 11.4,-7.8C484.3,273.693 481.2,266.593 474.9,264.093z" />
+        android:pathData="M389.967,213.333l74.672,-93.34c11.175,-13.968 1.23,-34.66 -16.659,-34.66h-192L255.98,64c0,-11.782 -9.551,-21.333 -21.333,-21.333L85.313,42.667L85.313,21.333C85.313,9.551 75.762,0 63.98,0C52.198,0 42.647,9.551 42.647,21.333L42.647,64v170.667v256c0,11.782 9.551,21.333 21.333,21.333c11.782,0 21.333,-9.551 21.333,-21.333L85.313,256h88.985c-2.358,6.674 -3.652,13.851 -3.652,21.333c0,35.355 28.645,64 64,64L447.98,341.333c17.888,0 27.833,-20.692 16.659,-34.66L389.967,213.333zM85.313,85.333h128v21.333v106.667h-128L85.313,85.333zM234.647,298.667c-11.791,0 -21.333,-9.542 -21.333,-21.333S222.855,256 234.647,256c11.782,0 21.333,-9.551 21.333,-21.333L255.98,128h147.613l-57.605,72.007c-6.233,7.791 -6.233,18.862 0,26.654l57.605,72.007L234.647,298.668z" />
 </vector>
