--- a/app/src/main/res/layout/profile_top_view.xml
+++ b/app/src/main/res/layout/profile_top_view.xml
@@ -20,10 +20,13 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/background_animation"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_scale="2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:lottie_autoPlay="true"
             app:lottie_cacheComposition="true"
             app:lottie_colorFilter="@color/colorPrimaryDark"
@@ -33,19 +36,20 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profilepic"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_centerHorizontal="true"
             android:contentDescription="Profile picture"
             android:fitsSystemWindows="true"
             android:stateListAnimator="@animator/list_animator"
             android:tooltipText="Alterar foto de perfil"
-            android:transitionName="profilepic"
-            app:civ_border_color="@color/transparent"
-            app:civ_border_width="0dp"
-            app:civ_circle_background_color="?android:textColorHint"
+            android:transitionName="@string/profilepictransiction"
+            app:civ_border_color="@color/colorAccent"
+            app:civ_border_width="3dp"
+            app:civ_circle_background_color="@color/oblack"
             app:layout_constraintBottom_toBottomOf="@id/background_animation"
             app:layout_constraintStart_toStartOf="@id/background_animation"
+            app:layout_constraintEnd_toEndOf="@id/background_animation"
             app:layout_constraintTop_toTopOf="@id/background_animation"
             tools:src="@drawable/ic__41_floppy_disk" />
 
