--- a/app/src/main/res/drawable/font_line.xml
+++ b/app/src/main/res/drawable/font_line.xml
@@ -15,7 +15,7 @@
             <solid android:color="@color/transparent" />
             <stroke
                 android:width="1dp"
-                android:color="@color/oblack" />
+                android:color="@color/lblack" />
         </shape>
     </item>
 
