--- a/app/src/main/res/drawable/ic_add_filled.xml
+++ b/app/src/main/res/drawable/ic_add_filled.xml
@@ -2,12 +2,9 @@
     android:width="24dp"
     android:height="24dp"
     android:autoMirrored="true"
-    android:viewportWidth="51"
-    android:viewportHeight="51">
+    android:viewportWidth="477.867"
+    android:viewportHeight="477.867">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M45,0.5l-45,0l0,43l5,0l0,-37l40,0z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M7,8.5v42h44v-42H7zM40,30.5H30v10c0,0.553 -0.447,1 -1,1s-1,-0.447 -1,-1v-10H18c-0.553,0 -1,-0.447 -1,-1s0.447,-1 1,-1h10v-10c0,-0.553 0.447,-1 1,-1s1,0.447 1,1v10h10c0.553,0 1,0.447 1,1S40.553,30.5 40,30.5z" />
+        android:pathData="M392.533,0h-307.2C38.228,0.056 0.056,38.228 0,85.333v307.2c0.056,47.105 38.228,85.277 85.333,85.333h307.2c47.105,-0.056 85.277,-38.228 85.333,-85.333v-307.2C477.81,38.228 439.638,0.056 392.533,0zM324.267,256H256v68.267c0,9.426 -7.641,17.067 -17.067,17.067s-17.067,-7.641 -17.067,-17.067V256H153.6c-9.426,0 -17.067,-7.641 -17.067,-17.067s7.641,-17.067 17.067,-17.067h68.267V153.6c0,-9.426 7.641,-17.067 17.067,-17.067S256,144.174 256,153.6v68.267h68.267c9.426,0 17.067,7.641 17.067,17.067S333.692,256 324.267,256z" />
 </vector>
