--- a/app/src/main/res/drawable/ic_add_outline.xml
+++ b/app/src/main/res/drawable/ic_add_outline.xml
@@ -2,12 +2,12 @@
     android:width="24dp"
     android:height="24dp"
     android:autoMirrored="true"
-    android:viewportWidth="55"
-    android:viewportHeight="55">
+    android:viewportWidth="477.867"
+    android:viewportHeight="477.867">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M49,8.5v-8H0v47h7v7h48v-46H49zM2,45.5v-43h45v6H7v37H2zM53,52.5H9v-5v-37h40h4V52.5z" />
+        android:pathData="M392.533,0h-307.2C38.228,0.056 0.056,38.228 0,85.333v307.2c0.056,47.105 38.228,85.277 85.333,85.333h307.2c47.105,-0.056 85.277,-38.228 85.333,-85.333v-307.2C477.81,38.228 439.638,0.056 392.533,0zM443.733,392.533c0,28.277 -22.923,51.2 -51.2,51.2h-307.2c-28.277,0 -51.2,-22.923 -51.2,-51.2v-307.2c0,-28.277 22.923,-51.2 51.2,-51.2h307.2c28.277,0 51.2,22.923 51.2,51.2V392.533z" />
     <path
         android:fillColor="#FF000000"
-        android:pathData="M42,30.5H32v-10c0,-0.553 -0.447,-1 -1,-1s-1,0.447 -1,1v10H20c-0.553,0 -1,0.447 -1,1s0.447,1 1,1h10v10c0,0.553 0.447,1 1,1s1,-0.447 1,-1v-10h10c0.553,0 1,-0.447 1,-1S42.553,30.5 42,30.5z" />
+        android:pathData="M324.267,221.867H256V153.6c0,-9.426 -7.641,-17.067 -17.067,-17.067s-17.067,7.641 -17.067,17.067v68.267H153.6c-9.426,0 -17.067,7.641 -17.067,17.067S144.174,256 153.6,256h68.267v68.267c0,9.426 7.641,17.067 17.067,17.067S256,333.692 256,324.267V256h68.267c9.426,0 17.067,-7.641 17.067,-17.067S333.692,221.867 324.267,221.867z" />
 </vector>
