--- a/app/src/main/res/drawable/ic_search_filled.xml
+++ b/app/src/main/res/drawable/ic_search_filled.xml
@@ -2,9 +2,15 @@
     android:width="24dp"
     android:height="24dp"
     android:autoMirrored="true"
-    android:viewportWidth="56.966"
-    android:viewportHeight="56.966">
+    android:viewportWidth="512.392"
+    android:viewportHeight="512.392">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M55.146,51.887L41.588,37.786c3.486,-4.144 5.396,-9.358 5.396,-14.786c0,-12.682 -10.318,-23 -23,-23s-23,10.318 -23,23s10.318,23 23,23c4.761,0 9.298,-1.436 13.177,-4.162l13.661,14.208c0.571,0.593 1.339,0.92 2.162,0.92c0.779,0 1.518,-0.297 2.079,-0.837C56.255,54.982 56.293,53.08 55.146,51.887zM23.984,6c9.374,0 17,7.626 17,17s-7.626,17 -17,17s-17,-7.626 -17,-17S14.61,6 23.984,6z" />
+        android:fillColor="?android:textColorHint"
+        android:pathData="m81.326,211c0,-95.627 70.276,-174.84 162,-188.811 -9.456,-1.441 -19.141,-2.188 -29,-2.188 -105.486,0 -191,85.514 -191,191s85.514,191 191,191c9.859,0 19.544,-0.748 29,-2.189 -91.723,-13.972 -162,-93.184 -162,-188.812z" />
+    <path
+        android:fillColor="?android:textColorPrimary"
+        android:pathData="m211.196,422c-116.346,0 -211,-94.654 -211,-211s94.654,-211 211,-211 211,94.654 211,211 -94.654,211 -211,211zM211.196,40c-94.29,0 -171,76.71 -171,171s76.71,171 171,171 171,-76.71 171,-171 -76.71,-171 -171,-171z" />
+    <path
+        android:fillColor="?android:textColorPrimary"
+        android:pathData="m492.196,512.392c-5.118,0 -10.237,-1.952 -14.143,-5.857l-89.5,-89.5c-7.81,-7.811 -7.81,-20.475 0,-28.285 7.811,-7.811 20.475,-7.811 28.285,0l89.5,89.5c7.81,7.811 7.81,20.475 0,28.285 -3.905,3.904 -9.024,5.857 -14.142,5.857z" />
 </vector>
