--- a/app/src/main/res/drawable/round_outline.xml
+++ b/app/src/main/res/drawable/round_outline.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/default_radius" />
+    <corners android:radius="5dp" />
 
 
     <!-- below code for different radius for each corner. -->
@@ -17,7 +17,7 @@
 
     <!-- Background color -->
     <stroke
-        android:width="1dp"
-        android:color="?android:textColorHint" />
+        android:width="3dp"
+        android:color="?android:textColorPrimary" />
 
 </shape>
