--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -4,29 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <LinearLayout
+    <RelativeLayout
         android:background="?android:colorBackground"
         android:id="@+id/mainView"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:padding="@dimen/default_padding"
         android:orientation="vertical">
 
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_padding"
+            android:id="@+id/close_button"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:contentDescription="Botão fechar"
             android:background="@color/transparent"
-            android:src="@drawable/ic_close" />
+            android:src="@drawable/ic_close"
+            android:tint="?android:textColorHint" />
 
         <TextView
+            android:id="@+id/dialog_title"
+            android:layout_margin="@dimen/default_padding"
+            android:textAlignment="center"
             style="@style/ToolbarTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Selecione um ícone de perfil" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_below="@id/dialog_title"
             android:id="@+id/picsrecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -55,6 +61,6 @@
             app:trackCornerRadius="@dimen/default_radius"
             app:trackThickness="5dp" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </layout>
