--- a/app/src/main/res/layout/quote_advertise_layout.xml
+++ b/app/src/main/res/layout/quote_advertise_layout.xml
@@ -34,6 +34,7 @@
 
             <com.google.android.gms.ads.formats.UnifiedNativeAdView
                 android:id="@+id/adView"
+                android:background="@drawable/advertise_gradient"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
