--- a/app/src/main/res/layout/quote_header_view.xml
+++ b/app/src/main/res/layout/quote_header_view.xml
@@ -9,7 +9,7 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/TextAppearance.MaterialComponents.Headline5"
+            style="@style/TextAppearance.MaterialComponents.Body1"
             android:padding="@dimen/default_padding"
             android:textStyle="bold"
             android:layout_width="match_parent"
@@ -19,6 +19,12 @@
         <include
             android:id="@+id/quotesRecycler"
             layout="@layout/quote_recycler" />
+
+        <View
+            android:id="@+id/header_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/oblack" />
 
 
     </LinearLayout>
