--- a/app/src/main/res/layout/quotes_card.xml
+++ b/app/src/main/res/layout/quotes_card.xml
@@ -7,10 +7,11 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/quoteCard"
+        android:layout_height="@dimen/card_size"
         android:layout_margin="@dimen/default_padding"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="4dp"
+        android:transitionName="@string/card_transaction"
         android:animateLayoutChanges="true"
         android:elevation="@dimen/cardview_default_elevation"
         android:foreground="?attr/selectableItemBackground"
@@ -38,6 +39,7 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:layout_centerVertical="true"
                     android:id="@+id/quoteDate"
                     style="@style/TextAppearance.MaterialComponents.Caption"
                     android:layout_width="wrap_content"
@@ -61,6 +63,7 @@
 
             <TextView
                 android:id="@+id/quoteTextView"
+                android:transitionName="@string/quote_transaction"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@id/author_text_view"
@@ -74,6 +77,7 @@
 
             <TextView
                 android:id="@+id/author_text_view"
+                android:transitionName="@string/author_transaction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/quoteButtons"
