--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,6 @@
         <item name="searchViewStyle">@style/Searchtheme</item>
         <item name="snackbarStyle">@style/AppSnackbar</item>
         <item name="android:windowActivityTransitions">true</item>
-        <item name="navigationIcon">@drawable/ic_baseline_arrow_back_ios_24</item>
     </style>
 
 
@@ -31,14 +30,15 @@
     </style>
 
     <style name="AppToolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="elevation">3dp</item>
         <item name="titleTextAppearance">@style/ToolbarTitle</item>
         <item name="background">@drawable/bottom_line</item>
-        <item name="android:background">@drawable/bottom_line</item>
+        <item name="paddingStart">@dimen/default_padding</item>
     </style>
 
     <style name="ToolbarTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:fontFamily">@font/lato_black</item>
-        <item name="android:padding">@dimen/default_padding</item>
+        <item name="android:textSize">26sp</item>
     </style>
 
     <style name="TabsTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
