few ui improvements

--- a/app/src/main/res/drawable/round.xml
+++ b/app/src/main/res/drawable/round.xml
@@ -16,6 +16,6 @@
 
 
     <!-- Background color -->
-    <solid android:color="?android:shadowColor" />
+    <solid android:color="?android:colorBackground" />
 
 </shape>
