--- a/app/src/main/res/layout/user_quote_card_view.xml
+++ b/app/src/main/res/layout/user_quote_card_view.xml
@@ -34,7 +34,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
-            android:textColor="?android:colorBackground"
+            style="@style/TextAppearance.MaterialComponents.Subtitle2"
+            android:textColor="@color/white"
             android:gravity="center"
             android:text="@{userData.name}"
             android:textSize="12sp"
